# AI-Learnings

./: LICENSE
agents/: IT_support_agent.ipynb  csv_faq_agent.ipynb
agents/faq-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml
basic/: LLMs_apis.ipynb
