[project]
name = "faq-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=6.1.0",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.35",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests==2.32.4",
    "tabulate>=0.10.0",
]
